--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,34 @@
 body{
     background-color: lightgreen;
     font-family: Arial;
+    margin: 0;
 }
 
 header{
     margin: 0 auto 20px;
-    width: 85%;
-    margin-top: 20px;
+    width: 100%;
+    top: 0;
     text-align: center;
     background-color: rgba(0, 128, 0, 0.425);
     color: white;
-    border: 2px solid white;
-    border-radius: 20px;
-    padding: 10px;
-    font-size: 22px; 
+    border: 1px solid green;
+    padding: 2px;
     font-weight: bolder;
+    box-shadow: 4px 4px 4px green;
+    h1{
+        text-shadow: 4px 4px 4px green;
+        line-height: 24px;
+    }
 }
+
 nav ul li{
-    display: inline;
+    list-style: none;
+    display: inline-flex;
 }
+
 nav ul li a{
     margin: 2px;
-    font-size: 20px;
+    line-height: 20px;
     font-weight: bold;
     text-align: center;
     color: rgb(3, 53, 3);
@@ -30,6 +37,7 @@ nav ul li a{
     padding-left: 50px;
     padding-right: 50px;
     border: 1px solid white;
+    box-shadow: 0.5px 0.5px 0.5px white;
     border-radius: 5px;
     text-decoration: none;
 }
@@ -40,46 +48,45 @@ nav ul li a:hover{
     padding: 10px;
     padding-left: 50px;
     padding-right: 50px;
+    text-decoration: underline;
+    box-shadow: 1px 1px 1px white;
 }
 
-#about{
-    h2{
-        font-size: 25px;
-        color: rgb(16, 48, 22);
-        text-decoration: underline;
-    }
+section{
     background-color: rgba(65, 192, 65, 0.404);
-    border: 2px solid white;
+    border: 0.5px solid green;
     border-radius: 20px;
     padding: 20px;
     margin: 0 auto 20px;
     width: 80%;
     font-size: 18px;
     color: rgb(3, 53, 3);
+    box-shadow: 4px 4px 4px green;
+     
 }
 
-#projects{
-     h2{
+h2{
         font-size: 25px;
         color: rgb(16, 48, 22);
         text-decoration: underline;
     }
+
+#projects{
     h3{
         font-size: 20px;
         color: rgb(16, 48, 22);
         margin-bottom: 5px;
     }
-    background-color: rgba(65, 192, 65, 0.404);
-    border: 2px solid white;
-    border-radius: 20px;
-    padding: 20px;
-    margin: 0 auto 20px;
-    width: 80%;
-    font-size: 18px;
-    color: rgb(3, 53, 3);
 }
 
-img{
+#about{
+    h3{
+        font-size: 18px;
+        color: rgb(16, 48, 22);
+    }
+}
+
+img, video{
     width: 30%;
     display:inline;
     margin: 5px auto;
@@ -88,24 +95,49 @@ img{
     border: 2px solid white;
 }
 
-#contact{
-     h2{
-        font-size: 25px;
-        color: rgb(16, 48, 22);
-        text-decoration: underline;
-    }
-    background-color: rgba(65, 192, 65, 0.404);
-    border: 2px solid white;
-    border-radius: 20px;
-    padding: 20px;
-    margin: 0 auto 20px;
-    width: 80%;
-    font-size: 18px;
-    color: rgb(3, 53, 3);
+audio{
+    width: 30%;
+    display:inline-flex;
+    margin-top: -5px;
+    margin-bottom: 0px;
+}
+
+a{
+  color: rgb(3, 53, 3);
+  text-decoration: none;
+}
+
+a:hover{
+  color: rgba(10, 131, 10, 0.596);
+  text-decoration: underline;
 }
 
 footer{
-    text-align: center;
-    color: rgb(3, 53, 3);
+    position: fixed;
+    width: 100%;
+    color: white;
     font-weight: lighter;
+    bottom: 0;
+    text-align: center;
+    background-color: rgba(0, 128, 0, 0.425);
+    padding: 1px;
+}
+
+@media (max-width: 600px){
+    nav ul li{
+        display: block-flex;
+        padding: 1px;
+        margin: 1px;
+    }
+
+    video, img{
+        display: flex;
+        width: 100%;
+        height: auto;
+    }
+
+    audio{
+        display: flex;
+        width: 100%;
+    }
 }
