--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,9 @@ header{
         padding: 15px;
         margin-bottom: 15px;
     }
+    h1 #intro{
+        padding: 10px;
+    }
 }
 
 nav, nav ul{
