--- a/styles.css
+++ b/styles.css
@@ -31,19 +31,12 @@ header{
     }
 }
 
-nav, nav ul{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-nav ul li{
+nav ul li {
     list-style: none;
     display: inline;
 }
 
-nav ul li a{
-    margin: 2px;
+nav ul li a {
     line-height: 20px;
     font-weight: bold;
     color: white;
@@ -125,13 +118,12 @@ img, video{
     width: 30%;
     display:inline;
     margin: 5px auto;
-    margin-bottom: 0px;
     border-radius: 8px;
     border: 2px solid white;
 }
 
 audio{
-    width: 30%;
+    width: 80%;
     display:inline;
     margin: 1px;
 }
@@ -226,6 +218,64 @@ footer{
     color: green;
     font-size: 17px;
 }
+
+.about{
+    display: flex;
+    gap: 20px;
+}
+
+.about-words {
+    flex: 1;
+}
+
+.slides {
+    flex: 1;
+    max-width: 400px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    border: 2px solid white;
+    border-radius: 8px;
+    box-shadow: 3px 3px 2px green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slides img {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 0;
+    object-fit: contain;
+    display: block;
+}
+
+.slides a.next {
+    color: white;
+    position: absolute;
+    top: 50%;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    right: 0px;
+    text-decoration: none;
+}
+
+.slides a.previous {
+    color: white;
+    position: absolute;
+    top: 50%;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 0px;
+    text-decoration: none;
+}
+
+.slides a.next:hover, .slides a.previous:hover {
+    background-color: white;
+    color: black;
+}
+
 
 @media (max-width: 600px){
     nav ul li{
