--- a/styles.css
+++ b/styles.css
@@ -76,24 +76,30 @@ section{
 }
 
 h2{
+    font-size: 25px;
+    color: rgb(16, 48, 22);
+    text-decoration: underline;
+    padding: 10px;
+    padding-left: 0px;
+    margin: 3px;
+}
+.projects{
+    h3{
         font-size: 25px;
         color: rgb(16, 48, 22);
-        text-decoration: underline;
-        padding: 10px;
-        padding-left: 0px;
-        margin: 3px;
-    }
-
-#projects{
-    h3{
-        font-size: 20px;
-        color: rgb(16, 48, 22);
-        margin: 1px;
-        margin-left: 0px;
         margin-bottom: 5px;
-        padding: 5px;
-        padding-left: 1px;
+        padding: 15px;
+        padding-left: 90px;
+        padding-right: 90px;
+        border-radius: 5px;
+        border: 4px solid white;
+        background-color: rgba(0, 128, 0, 0.425);
     }
+}
+.projects{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #about{
@@ -114,8 +120,8 @@ h2{
     }
 }
 
-img, video{
-    width: 30%;
+img {
+    width: 65%;
     display:inline;
     margin: 5px auto;
     border-radius: 8px;
