--- a/styles.css
+++ b/styles.css
@@ -127,7 +127,7 @@ img {
 }
 
 audio {
-    width: 80%;
+    width: 70%;
     display:inline;
     margin: 1px;
 }
@@ -154,7 +154,7 @@ footer {
     width: 100%;
 }
 
-.detailsButton {
+.detailsButton, #showFormButton {
     width: 20%;
     padding: 10px;
     margin-bottom: 10px;
@@ -165,7 +165,7 @@ footer {
     font-size: 15px;
 }
 
-.detailsButton:hover, .submitButton:hover {
+.detailsButton:hover, .submitButton:hover, #showFormButton:hover {
     background-color: green;
     box-shadow: 0 0 8px green;
     border-color: white;
