--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,54 @@ footer {
     color: black;
 }
 
+.skills {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.skill {
+    padding: 20px;
+    padding-right: 50px;
+    padding-left: 50px;
+    background: green;
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px green; 
+    border: 2px solid green;
+}
+
+@keyframes shake {
+    0% {transform: translateX(0);}
+    10% {transform: translateX(-3px);}
+    20% {transform: translateX(3px);}
+    30% {transform: translateX(-3px);}
+    40% {transform: translateX(3px);}
+    50% {transform: translateX(-2px);}
+    60% {transform: translateX(2px);}
+    70% {transform: translateX(-1px);}
+    80% {transform: translateX(1px);}
+    90% {transform: translateX(0);}
+    100% {transform: translateX(0);}
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-10px);}
+    60% {transform: translateY(-5px);}
+}
+
+.skill:hover {
+    animation: shake 1s, bounce 0.5s;
+    background: lightgreen; 
+    box-shadow: 2px 2px 8px white;
+    color: black;
+    font-weight: 900;
+    border: 2px solid white;
+}
+
 @media (max-width: 600px){
     nav ul li{
         display:inline-block;
