--- a/styles.css
+++ b/styles.css
@@ -340,6 +340,111 @@ html {
     scroll-behavior: smooth;
 }
 
+/* Dark Mode */
+body.darkMode {
+    background-color: black;
+    color: white;
+}
+
+body.darkMode header {
+    background-color: black;
+    color: white;
+    border: 1px solid black;
+    box-shadow: 4px 4px 4px white;
+}
+
+body.darkMode nav ul li a {
+    background-color: gray;
+    color: white;
+    border: 1px solid grey;
+    box-shadow: 0.5px 0.5px 0.5px grey;
+}
+
+body.darkMode nav ul li a:hover {
+    background-color: black;
+    color: white;
+    box-shadow: 1px 1px 8px grey;
+    border-color: white;
+}
+
+body.darkMode section {
+    background-color: black;
+    color: white;
+    border: 0.5px solid grey;
+    box-shadow: 4px 4px 4px grey;
+}
+
+body.darkMode .projects h3 {
+    background-color: gray;
+    color: white;
+    border: 4px solid gray;
+}
+
+body.darkMode .skills .skill {
+    background-color: black;
+    color: white;
+    border: 2px solid gray;
+    box-shadow: 2px 2px 6px gray;
+}
+
+body.darkMode .contactForm {
+    background-color: black;
+    color: white;
+    border: 3px solid gray;
+    box-shadow: 3px 3px 2px gray;
+}
+
+body.darkMode .contactForm input,
+body.darkMode .contactForm textarea {
+    background-color: black;
+    color: white;
+    border: 1px solid gray;
+}
+
+body.darkMode footer {
+    background-color: black;
+    color: white;
+    border-top: 1px solid gray;
+}
+
+body.darkMode h1 {
+    text-shadow: 1px 1px 1px gray;
+}
+
+body.darkMode h2, body.darkMode #about h3 {
+    color: white;
+}
+
+body.darkMode .detailsButton, body.darkMode #showFormButton, body.darkMode .filterButton {
+    background-color: gray;
+    color: white;
+}
+
+body.darkMode .detailsButton:hover, body.darkMode #showFormButton:hover, body.darkMode .filterButton:hover {
+    background-color: black;
+    border: 1px solid white;
+    box-shadow: 1px 1px 1px gray;
+}
+
+#darkMode {
+    background-color: green;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    border-radius: 5px;
+    border: 1px solid white;
+    position: fixed;
+    top: 5px;
+    right: 10px;
+}
+
+body.darkMode #darkMode {
+    background-color: gray;
+    color: white;
+    border: 1px solid white;
+}
+
 @media (max-width: 600px){
     nav ul li{
         display:inline-block;
